--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+body {
+  background: url("../../assets/Backgrounds/Castle/castle01.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .game__timer {
   float: right;
   margin-right: 2%;
