--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,31 @@
 body {
+  margin: 0;
+  min-height: 100vh;
   background: url("../../assets/Backgrounds/Castle/castle01.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
+/* start page */
+
+#opening-title{
+  font-family: 'Metal Mania';
+  text-transform: uppercase;
+  font-size: 5rem;
+  letter-spacing: 7px;
+  color:rgb(223, 193, 138);
+  text-shadow: 4px 4px rgba(124, 28, 28, 0.905);
+}
+
+#start-container{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+/* timer */
 
 .game__timer {
   float: right;
