--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,52 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+/* animation test */
 
-/* start page */
+.rain{
+  height: 100vh;
+  animation: rain 0.3s linear infinite;
+}
+
+.rain::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../assets/effects/thunder.png");
+  top: -100px;
+  transform: rotate(180deg);
+  animation: lightining 2s linear infinite;
+  opacity: 1;
+}
+@keyframes lightining{
+  0%{
+      opacity: 0;
+  }
+  20%{
+      opacity: 0;
+  }
+  21%{
+      opacity: 0;
+  }
+  25%{
+      opacity: 0;
+  }
+  30%{
+      opacity: 0;
+  }
+  31%{
+      opacity: 1;
+  }
+  35%{
+      opacity: 0;
+  }
+  100%{
+      opacity: 0;
+  }
+}
+/* animation over
+ */
 
 #opening-title{
   font-family: 'Metal Mania';
@@ -23,6 +67,34 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+.btn{
+  text-align: right;
+  padding-top: 400px;
+}
+#game__start-btn{
+  background-color: Transparent;
+  border: none;
+   width: fit-content;
+  height: fit-content; 
+  cursor:pointer;
+  outline:none;
+  font-family: 'Just Another Hand', cursive;
+  font-size: 4rem;
+  color:rgba(246, 255, 244, 0.905);
+  text-shadow: 3px 3px rgba(124, 28, 28, 0.905);
+  text-transform: uppercase;
+  transform: rotate(-5deg);
+  padding-right: 5%;
+}
+#game__start-btn:hover{
+color:rgba(246, 255, 244, 0.905);
+transform: scale(115%)rotate(-5deg);
+}
+
+#game__start-btn:active{
+  transform: translate(0, 0.1rem)rotate(-5deg);
+  box-shadow: 0 0.2rem rgba(116, 111, 111, 0.624);
 }
 
 /* timer */
