--- a/src/style.css
+++ b/src/style.css
@@ -130,7 +130,8 @@ body {
 }
 
 .sidebar-colors {
-  background-color: rgba(138, 43, 226, 0.6);
+  background-color: rgba(64, 10, 64, 0.6);
+  border: 4px solid #791a40;
 }
 
 .game-left-panel__title {
@@ -139,7 +140,7 @@ body {
 }
 .game-left-panel__items {
   width: 80%;
-  background-color: blueviolet;
+  background-color: rgba(59, 27, 102, 0.6);
   display: inline-block;
   height: 70%;
 }
@@ -180,17 +181,18 @@ body {
   float: left;
   margin-left: 2%;
   font-size: 1rem;
-  color: #000;
   padding: 0 1rem;
   font-family: "Press Start 2P";
-  border: 4px solid #000;
-  background-color: #faebd7;
+  background-color: #934842;
   align-items: center;
   animation: shake 0.5s;
+  animation-iteration-count: 1;
+  animation-play-state: running;
   animation-iteration-count: infinite;
   animation-play-state: paused;
   display: flex;
   width: 13rem;
+  border: 4px solid #ff7f50;
 }
 .timer__title {
   font-size: 1rem;
