--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ body {
  */
 
 #opening-title {
-  position: absolute;
+  /* position: absolute; */
   font-family: "Metal Mania";
   text-transform: uppercase;
   font-size: 5rem;
