--- a/src/style.css
+++ b/src/style.css
@@ -75,14 +75,13 @@ body {
   text-shadow: 4px 4px rgba(81, 49, 49, 0.905);
   margin-top: 2%;
 }
-
 .btn-container {
   text-align: right;
   animation: shake 10s infinite;
   padding-top: 500px;
   bottom: 0;
   bottom: 4rem;
-}
+} 
 #game__start-btn {
   background-color: Transparent;
   border: none;
@@ -98,6 +97,7 @@ body {
   transform: rotate(-5deg);
   padding-right: 5%;
   transition: all 0.2s ease-in-out;
+  animation: shake 10s infinite;
 }
 #game__start-btn:hover {
   color: rgba(246, 255, 244, 0.905);
