--- a/src/style.css
+++ b/src/style.css
@@ -149,23 +149,66 @@ body {
   color: white;
 }
 
+#game-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .operation__panel {
   text-align: center;
+  background-color: transparent;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-size: 2rem;
+  color: thistle;
+  font-family: "Press Start 2P";
+  margin-top: 20px;
 }
 
 .operation__question {
   font-size: 3rem;
 }
 
-.monster-container {
-  position: absolute;
-  bottom: 0;
-  width: 40%;
+.answer-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#answer {
+  background-color: rgb(107,142,35, 0.2);
   text-align: center;
+  width: 200px;
+  height: 70px;
+  font-size: 2rem;
+  border: 6px groove thistle;
+  color: thistle;
+  font-family: "Press Start 2P";
+}
+
+#answer:focus {
+  outline: 0 none;
+}
+
+#enter-answer-btn {
+  width: 80px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  background-color: thistle;
+  border-radius: 1em;
+  box-shadow: 2px 2px #888888;
+  font-family: "Press Start 2P";
+}
+
+
+.monster-container {
+  text-align: center;
+  align-content: center;
 }
 
 .monster {
-  width: 60%;
+  margin-top: 1vh;
 }
 
 .game-right-panel {
