--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,27 @@ body {
   transform: translate(0, 0.1rem) rotate(-5deg);
 }
 
+/* cut scene */
+
+/* #cut-scene{
+
+/* next btn */
+.next-wrapper{
+  position: absolute;
+  bottom: 20px;
+  right: 2%;
+}
+
+.next-scene{
+  font-size: 4rem;
+  background-color: transparent;
+  border: none;
+  color: rgba(65, 216, 103, 0.994);
+  border-radius: 20%;
+  width: 4.4rem;
+  background-color: rgba(241, 255, 228, 0.871);
+}
+
 /* game */
 
 .app-wrapper {
