--- a/src/style.css
+++ b/src/style.css
@@ -369,6 +369,13 @@ img.wizard{
   }
 }
 
+@media screen and (max-width: 2000px) {
+  img.wizard{
+    bottom: 35%;
+
+  }
+}
+
 @media screen and (max-width: 670px) {
   #opening-title {
     font-size: 2.2rem;
@@ -386,6 +393,7 @@ img.wizard{
     height: 150px;
   }
 }
+
 
 .hidden-element {
   display: none;
