--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ main {
 body {
   margin: 0;
   min-height: 100vh;
-  background: url("../../assets/Backgrounds/Castle/castle01.jpg") no-repeat
+  background: url("../assets/Backgrounds/Castle/castle01.jpg") no-repeat
     center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -24,7 +24,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../../assets/effects/thunder.png");
+  background-image: url("../assets/effects/thunder.png");
   top: -100px;
   transform: rotate(180deg);
   animation: lightining 2s linear infinite;
