--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@ main {
 body {
   margin: 0;
   min-height: 100vh;
-  background: url("../assets/Backgrounds/Castle/castle01.jpg") no-repeat
-    center center fixed;
+  background: url("../assets/Backgrounds/Castle/castle01.jpg") no-repeat center
+    center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -99,6 +99,7 @@ body {
   transform: rotate(-5deg);
   padding-right: 5%;
   transition: all 0.2s ease-in-out;
+  text-decoration: none;
 }
 .title-screen-btn:hover {
   color: rgba(246, 255, 244, 0.905);
@@ -109,19 +110,65 @@ body {
   transform: translate(0, 0.1rem) rotate(-5deg);
 }
 
-.credits__msg {
-  width: 16rem;
-  margin: 0 auto;
-  text-align: left;
-  margin-bottom: 0.25rem;
+.credits__modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
 }
 
-.credits__msg-list {
-  list-style-type: square;
+.credits__modal:target {
+  opacity: 1;
+  pointer-events: auto;
 }
 
-.credits__msg--hidden {
-  display: none;
+.credits__container {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 5px;
+  border: 1px solid #888;
+  width: 80%;
+  background-image: linear-gradient(
+    180.5deg,
+    rgba(245, 245, 220, 1) 23.6%,
+    rgba(231, 231, 231, 1) 130.2%
+  );
+  width: 78%;
+  margin: 25% auto;
+  border-radius: 20px;
+}
+
+.credits__close-modal {
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-right: -0.9rem;
+  margin-top: -1rem;
+  background: #606061;
+  color: #fff;
+  line-height: 1.5rem;
+  text-align: center;
+  width: 1.5rem;
+  text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 1px 1px 3px #000;
+}
+.credits__close-modal:hover,
+.credits__close-modal:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  background: #00d9ff;
 }
 
 /* cut scene */
@@ -252,7 +299,7 @@ img.egg {
 }
 
 #answer {
-  background-color: rgb(107,142,35, 0.2);
+  background-color: rgb(107, 142, 35, 0.2);
   text-align: center;
   width: 200px;
   height: 70px;
@@ -274,8 +321,6 @@ img.egg {
   box-shadow: 2px 2px #888888;
   font-family: "Press Start 2P";
 }
-
-
 
 .monster-container {
   position: absolute;
