--- a/src/style.css
+++ b/src/style.css
@@ -114,11 +114,9 @@ body {
   position: fixed;
   z-index: 1;
   left: 0;
-  top: 0;
+  top: -15vh;
   width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: #000;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
   opacity: 0;
   -webkit-transition: opacity 400ms ease-in;
@@ -134,18 +132,17 @@ body {
 
 .credits__container {
   background-color: #fefefe;
-  margin: 15% auto;
   padding: 5px;
   border: 1px solid #888;
-  width: 80%;
   background-image: linear-gradient(
     180.5deg,
     rgba(245, 245, 220, 1) 23.6%,
     rgba(231, 231, 231, 1) 130.2%
   );
-  width: 78%;
+  width: 30%;
   margin: 25% auto;
   border-radius: 20px;
+  text-align: center;
 }
 
 .credits__close-modal {
@@ -153,7 +150,7 @@ body {
   font-size: 28px;
   font-weight: bold;
   margin-right: -0.9rem;
-  margin-top: -1rem;
+  margin-top: -18.9rem;
   background: #606061;
   color: #fff;
   line-height: 1.5rem;
@@ -169,6 +166,10 @@ body {
   text-decoration: none;
   cursor: pointer;
   background: #00d9ff;
+}
+
+.credits__list {
+  list-style-type: none;
 }
 
 /* cut scene */
