--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,33 @@ main {
 body {
   margin: 0;
   min-height: 100vh;
+  /* background: url("../assets/Backgrounds/Castle/castle01.jpg") no-repeat
+    center center fixed; */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.background-image-div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  top: 0;
+  z-index: -1;
   background: url("../assets/Backgrounds/Castle/castle01.jpg") no-repeat
-    center center fixed;
+  center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.background-image-div.preload {
+  z-index: -2;
+  background: url('../assets/Backgrounds/road/12Z_2104.w026.n002.312B.p1.312.jpg')  no-repeat
+  center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
