--- a/src/style.css
+++ b/src/style.css
@@ -113,16 +113,17 @@ body {
 .credits__modal {
   position: fixed;
   z-index: 1;
-  left: 0;
-  top: -15vh;
+  top: 0;
   width: 100%;
+  height: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
-  opacity: 0;
-  -webkit-transition: opacity 400ms ease-in;
-  -moz-transition: opacity 400ms ease-in;
   transition: opacity 400ms ease-in;
+  opacity: 0;
   pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .credits__modal:target {
@@ -131,34 +132,35 @@ body {
 }
 
 .credits__container {
-  background-color: #fefefe;
-  padding: 5px;
   border: 1px solid #888;
   background-image: linear-gradient(
     180.5deg,
     rgba(245, 245, 220, 1) 23.6%,
     rgba(231, 231, 231, 1) 130.2%
   );
-  width: 30%;
-  margin: 25% auto;
   border-radius: 20px;
-  text-align: center;
 }
 
 .credits__close-modal {
-  float: right;
   font-size: 28px;
   font-weight: bold;
-  margin-right: -0.9rem;
-  margin-top: -18.9rem;
   background: #606061;
   color: #fff;
-  line-height: 1.5rem;
   text-align: center;
-  width: 1.5rem;
+  width: 2rem;
+  height: 2rem;
   text-decoration: none;
-  border-radius: 12px;
+  border-radius: 23px;
   box-shadow: 1px 1px 3px #000;
+  position: relative;
+  z-index: 2;
+  float: right;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  display: flex;
+  bottom: 0.7rem;
+  left: 0.8rem;
 }
 .credits__close-modal:hover,
 .credits__close-modal:focus {
