--- a/src/style.css
+++ b/src/style.css
@@ -288,15 +288,13 @@ img.egg {
   height: 100%;
   display: flex;
   flex-direction: column;
-  
+  justify-content: flex-end;
 }
 
 .game-left-panel {
-  justify-content: space-between;
 }
 
 .game-right-panel {
-  justify-content:flex-end;
   align-items: flex-end;
   margin-right: 20px;
 }
@@ -311,15 +309,12 @@ img.egg {
   border: 4px solid #791a40;
 } */
 
-.game-left-panel__title {
-  margin-top: 2rem;
-  font-size: 3.1rem;
-}
 .game-left-panel__items {
   width: 80%;
   background-color: rgba(59, 27, 102, 0.6);
   display: inline-block;
   min-height: 20%;
+  padding-left: 20px;
 }
 
 .main__game {
